# ttp_task3

./: Makefile  pyproject.toml
tests/: conftest.py  misc.py  settings.py
tests/use_cases/: test_info.py  test_reaction_button.py  test_region_change.py  test_search_sorts.py  test_search_works.py  test_send_news_validation.py  test_topic.py
